--- a/_config.yml
+++ b/_config.yml
@@ -5,7 +5,7 @@ description: >-
   para prácticas de alumnos utilizando Markdown, HTML,
   JavaScript, CSS y otras tecnologías relacionadas
 baseurl: "/Jonh1979"
-url: "https://jonh1979.github.io/Jekill_Jmoron/"
+url: "https://jonh1979.github.io/Jekill_Jmoron.github.io/"
 
 theme: minima
 #plugins:
