--- a/_config.yml
+++ b/_config.yml
@@ -4,7 +4,7 @@ description: >-
   Ejemplo de esqueleto de un sitio web creado con Jekyll 
   para prácticas de alumnos utilizando Markdown, HTML,
   JavaScript, CSS y otras tecnologías relacionadas
-baseurl: "/Jonh1979/Jekill_Jmoron"
+baseurl: "Jekill_Jmoron"
 url: "https://jonh1979.github.io/Jekill_Jmoron"
 
 theme: minima
